<resources>
    <string name="app_name" translatable="false">My Application</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="icon_name">icon_Name</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up">Sign Up</string>
    <string name="help">Help</string>
    <string name="logins">Login</string>
    <string name="sign_ups">Sign Up</string>
    <string name="remember_me">Remember Me</string>
    <string name="home_screen_background">Home Screen Background</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="home_icon">home icon</string>
    <string name="rocket_icon">Rocket icon</string>
    <string name="Profile">Profile</string>
    <string name="Plan">Plan</string>
    <string name="Home">Home</string>
    <string name="generate">Generate</string>
    <string name="back">Back</string>
    <string name="confirm_username">Confirm Username</string>
    <string name="confirm_password">Confirm password</string>
    <string name="signup">Signup</string>
    <string name="all">All</string>
    <string name="exercises">Exercises</string>
    <string name="recovery">Recovery</string>
    <string name="mental">Mental</string>
    <string name="temp">Temp</string>
    <string name="temp_button">Temp Button</string>
    <string name="hello">Hello</string>
    <string name="max_duration">Max Duration</string>
    <string name="times_per_hour">Times Per Hour</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="focus">Focus</string>
    <string name="endurance">Endurance</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="night_mode">Night Mode</string>
    <string name="notifications">Notifications</string>
    <string name="silent_mode">Silent Mode</string>
    <string name="language">Language</string>
    <string name="contact">Contact</string>
    <string name="about">About</string>
    <string name="save_settings">Save Settings</string>
    <string name="select_theme">Select Theme:</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="settings">Settings</string>
    <string name="langOption">English</string>
    <string name="second_Lang_opt">Spanish</string>
    <string name="select_setting">Select Setting</string>
    <string name="next">next</string>
    <string name="exercise">exercise</string>


</resources>