<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">

    <ToggleButton
        android:id="@+id/toggle_btn"
        android:layout_width="315dp"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_btn"
        android:checked="true"
        android:contentDescription="@string/home_screen_background"
        android:scaleType="centerCrop"
        android:textOff="@string/exercises"
        android:textOn="@string/all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/tog_ExerciseType_Recovery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/round_tog"
        android:checked="false"
        android:contentDescription="@string/home_screen_background"
        android:scaleType="centerCrop"
        android:textOff="@string/recovery"
        android:textOn="@string/recovery"
        app:layout_constraintEnd_toStartOf="@+id/tog_ExerciseType_Mental"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelTextFocus" />

    <ToggleButton
        android:id="@+id/tog_ExerciseType_Mental"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/round_tog"
        android:checked="false"
        android:contentDescription="@string/home_screen_background"
        android:scaleType="centerCrop"
        android:textOff="@string/mental"
        android:textOn="@string/mental"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelTextFocus" />

    <ToggleButton
        android:id="@+id/tog_ExerciseType_Endurance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/round_tog"
        android:checked="false"
        android:contentDescription="@string/home_screen_background"
        android:scaleType="centerCrop"
        android:textOff="@string/endurance"
        android:textOn="@string/endurance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.391"
        app:layout_constraintStart_toEndOf="@+id/tog_ExerciseType_Mental"
        app:layout_constraintTop_toBottomOf="@+id/labelTextFocus" />

    <TextView
        android:id="@+id/labelTextFocus"
        android:layout_width="200dp"
        android:layout_height="21dp"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:text="@string/focus"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggle_btn"
        tools:ignore="TextSizeCheck" />

    <ToggleButton
        android:id="@+id/startTog"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:background="@drawable/round_start_tog"
        android:drawablePadding="4dp"
        android:text="@string/generate"
        android:textColor="@color/red"
        android:textOff="@string/start"
        android:textOn="@string/stop"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/duration"
        tools:ignore="TextSizeCheck" />

    <SeekBar
        android:id="@+id/timePerHour"
        android:layout_width="315dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:max="240"
        android:min="1"
        android:progress="0"
        android:progressDrawable="@drawable/customseekbar"
        android:progressTint="@color/red"
        android:thumb="@drawable/icon_rocket_selected_moving"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelTextperHour" />

    <SeekBar
        android:id="@+id/duration"
        android:layout_width="315dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:max="15"
        android:min="1"
        android:progress="0"
        android:progressDrawable="@drawable/customseekbar"
        android:thumb="@drawable/icon_rocket_selected_moving"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelTextDuration" />

    <TextView
        android:id="@+id/labelTextperHour"
        android:layout_width="315dp"
        android:layout_height="21dp"
        android:layout_marginTop="30dp"
        android:text="@string/times_per_hour"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tog_ExerciseType_Mental"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/labelTextDuration"
        android:layout_width="315dp"
        android:layout_height="25dp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:text="@string/max_duration"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timePerHour"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>